--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 				<h2 class="h2 text-center">Proyectos</h2>
 				<div class="row pt-5 pb-2">
 					<div class="col-6 ">
-						<img src="img/fotos/img-0352.jpg" class="imagen">
+						<img src="img/fotos/img-0352.JPG" class="imagen">
 					</div>
 					<div class="col-6 ml-2">
 						<h2 class="nm-proyecto">Nombre del Proyecto 1</h2>
@@ -153,7 +153,7 @@
 				</div>
 				<div class="row pb-5">
 					<div class="col-6 ">
-						<img src="img/fotos/img-9246.jpg" class="imagen">
+						<img src="img/fotos/img-9246.JPG" class="imagen">
 					</div>
 					<div class="col-6 ml-2">
 						<h2 class="nm-proyecto">Nombre del Proyecto 2</h2>
